pom: rydder i maven-failsafe-plugin og maven-surefire-plugin